      it's not really a "smart" transport, just one that does file operations
      via remote procedure calls.  (Andrew Bennetts)
 
    * The ``lock_write`` method of ``LockableFiles``, ``Repository`` and
     ``Branch`` now accept a ``token`` keyword argument, so that separate
     instances of those objects can share a lock if it has the right token.
     (Andrew Bennetts, Robert Collins)

  BUGFIXES:

    * Don't fail bundle selftest if email has 'two' embedded.  
      (#98510, Ian Clatworthy)

    * Remove ``--verbose`` from ``bzr bundle``. It didn't work anyway.
      (Robert Widhopf-Fenk, #98591)

    * Remove ``--basis`` from the checkout/branch commands - it didn't work
      properly and is no longer beneficial. Fixes #53675 and #43486.
      (Robert Collins)

    * Don't produce encoding error when adding duplicate files.
      (Aaron Bentley)

    * Teach ``common_ancestor`` to shortcut when the tip of one branch is
      inside the ancestry of the other. Saves a lot of graph processing
      (with an ancestry of 16k revisions, ``bzr merge ../already-merged``
      changes from 2m10s to 13s).  (John Arbash Meinel, #103757)

    * Fix ``show_diff_trees`` to handle the case when a file is modified,
      and the containing directory is renamed. (The file path is different
      in this versus base, but it isn't marked as a rename).
      (John Arbash Meinel, #103870)

    * FTP now works even when the FTP server does not support atomic rename.
      (Aaron Bentley, #89436)

  TESTING:

    * Added ``bzrlib.strace.strace`` which will strace a single callable and
      return a StraceResult object which contains just the syscalls involved
      in running it. (Robert Collins)

    * New test method ``reduceLockdirTimeout`` to drop the default (ui-centric)
      default time down to one suitable for tests. (Andrew Bennetts)

    * Add new vfs_transport_factory attribute on tests which provides the 